# master-thesis

./: .gitignore  .gitmodules  Gantt_timetable.ods  start.txt
diagrams/: State Chart.drawio  kräfte.drawio
files_basico/: Gantt_timetable.ods
info/: pts.npy
info/RV Practica/: zonasChapaGeneral_Funciones.mlx
info/ros/: irobot.sh  questions  start_comand
info/ros/catkin_ws/devel/: local_setup.sh  (+1 more)
info/ros/catkin_ws/src/irobot_inspection_pckg/: CMakeLists.txt  package.xml
info/ros/catkin_ws/src/irobot_inspection_pckg/action/: getCompletePanorama.action  getPolygons.action
info/ros/catkin_ws/src/irobot_inspection_pckg/launch/: launch_inspection_servers.launch
info/ros/catkin_ws/src/irobot_inspection_pckg/src/: getimages_actionserver.cpp  getpartialpanorama_actionserver.cpp  getpolygon_actionserver.cpp
info/ros/catkin_ws/src/prueba/: CMakeLists.txt  package.xml
info/ros/catkin_ws/src/prueba/src/: prueba.cpp
info/ros/nav_insp_ws/src/inspection_realsense/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt.save  package.xml
info/ros/nav_insp_ws/src/inspection_realsense/action/: captureImages.action  checkNewScanBackward.action  findInitialPose.action  moveBackward.action  moveLeftStep.action
info/ros/nav_insp_ws/src/inspection_realsense/launch/: launch_inspection_actionservers.launch
info/ros/nav_insp_ws/src/inspection_realsense/msg/: Twist_inspection.msg
info/ros/nav_insp_ws/src/inspection_realsense/src/: captureImages_actionserver.cpp  checkNewScanBackward_actionserver.cpp  findinitialpose_server.cpp  moveBackward_actionserver.cpp  moveForward_actionserver.cpp  moveLeftStep_actionserver.cpp  repub_cmd_vel.cpp
info/ros/nav_insp_ws/src/movement_summit/: CMakeLists.txt  movement_summit.cpp  package.xml
info/ros_tut/: README_Ros.md
info/snippets/: ComputerVision.ipynb  ComputerVision.py  ComputerVisionHeinz.py  CubrirChapa.m  PathPlaningHeinz.py  PathPlaningNormal.py  PathPlaningNormal_reworked.py  PathPlaningTrap.py  PathPlaningTrap_reworked.py  PathPlanning.py  PathPlanning_bak.py  WorkingZones.py  conturdetection_v4_with_border.py  conturdetection_v5.py  conturdetection_v6.py  dilate_example.py  draw_circle.py  draw_realpixel_on_input_image.py  file.txt  fill_contours copy.py  fill_contours.py  fill_contours_and_make_boarder.py  main.ipynb  main.py  matlab_algoritm_2.py  poly2trap.py  poster.txt  questions.txt  seidel.py  test copy 2.py  test copy 3.py  test.ipynb  test.py  trapezoid_v2.py  workingzone.ipynb  workingzone_reworked.ipynb  workingzones_reworked.py
info/snippets/old/: PathPlaningNormal_reworked.py  PathPlaningTrap_reworked.py  PathPlaning_2.py  PathPlaning_polygon.py  conturdetection.cpp  conturdetection.py  conturdetection_v2.py  conturdetection_v3.py  conturdetection_v3_with_hull.py  conturdetection_v4.py  conturdetection_v45.py  conturdetection_v5.py  corner_points.py  dilate_example.py  intersection.py  make_parallel line copy.py  make_parallel line.py  make_parallel.py  matlab_algoritm.py  matlab_algoritm_func_2_flascher.py  matlab_algoritm_func_old.py  test copy 2.py  test copy 5.py  test.py  test_old_old.py  test_workingzone_aglo_bak.py  trapezoid_v3.py  trapezoid_v4.py  trapezoid_v5.py  trapezoid_v6.py  workingzone.ipynb
info/snippets/ros/: pose.py
info/snippets/util/: any_example.py  array.py  bit_wise_or_example.py  colorchange.py  darw_line_old.py  dilation_Example.py  draw_arrow.py  draw_line_old2.py  errode_Example.py  fine_contours_opencv.py  generate_binary_structure_example.py  get_edges.py  heatmap.py  images.py  rotate.py  working_zones.py
info/source/snipets/: q-learn.py
info/workingzones_matlab/: zonasChapaGeneral_Funciones.mlx
info/zonasChapaGeneral_Funciones/matlab/: document.xml
info/zonasChapaGeneral_Funciones/metadata/: mwcorePropertiesExtension.xml
mecanica/: camera_mount.par  linear_conector.par  welle.par
mecanica/cad/: Baugruppe_gimbel.asm  Baugruppe_gimbel.cfg  achse_d_10_l250.par  camera_mount.par  gimbel_2.asm  gimbel_2.cfg  linear_conector.par  m4_screw.par  schlitten.par  welle.par
mecanica/cad/bearings/: SKF_628_8-2RS1_or.par
mecanica/cad/festo/: 3013573 EGC-120-300-BS-10P-KF-0H-ML-GK---(0).asm  3013573 EGC-120-300-BS-10P-KF-0H-ML-GK---(0).cfg  DIN-913 - M6x6.par  EGC-120-BS-KF_(Deckel LI2_0).par  EGC-120-BS-KF_(Deckel RE1_0).par  EGC-120-BS546123GK0--0-ML--0_0_R0L22000.par  EGC-120-GK-GPBS1----(0).par  camera_mount.asm  camera_mount.cfg
mecanica/cad/gear/: Assembly01.gtqasm  Spur01.gtc
mecanica/cad/version1/: Baugruppe_gimbel.cfg  gimbel_2.asm  gimbel_2.cfg  linear_conector.par  linearsystem.par  welle.par
mecanica/cad/version2/: camera.par  camera_mount.par  linear_conector.par  verbindung_robot_linearsystem.par  welle.par
mecanica/cad/version3/: Asm1.asm  Asm1.cfg  Gear1.STEP  Gear1.asm  Gear1.cfg  Gear2.STEP  Gear2.asm  Gear2.cfg  beispiel_symetry.par  buchse_small.par  camera.par  camera_mount.asm  camera_mount.cfg  camera_mount.par  camera_mount_abstandhalter.par  camera_mount_grundplatte.par  linear_conector.asm  linear_conector.cfg  linear_conector.par  linear_mount_abstandhalter.par  linear_mount_grundplatte.par  readme-and-terms-of-use-3d-cad-models.txt  robot_mount_abstandhalter.par  robot_mount_grundplatte.par  spur gear_am_Metric - Spur gear 1.5M 20T 20PA 10FW ---S20N75H50L8N.par  spur gear_am_Metric - Spur gear 1.5M 40T 20PA 10FW ---S40N75H50L15N.par  verbindung_robot_linearsystem.asm  verbindung_robot_linearsystem.cfg  verbindung_robot_linearsystem.par  welle.par
mecanica/cad/version4/: buchse.par  camera.par  camera_mount.asm  camera_mount.cfg  camera_mount_abstandshalter.par  camera_mount_grundplatte.par  camera_mount_sensor_abstandhalter_winkel.par  linear_conector.asm  linear_conector.cfg  linear_conector_abstandshalter.par  linear_conector_grundplatte.par  linear_conector_sensor_abstandhalter.par  mechanismus.asm  mechanismus.cfg  robot_conector_abstandhalter.par  robot_conector_grunplatte.par  welle.par
tfm/: deutsch.docx  englisch.docx  englisch_reviewed.docx  ~$eutsch.docx  ~$glisch.docx  ~$glisch_reviewed.docx  ~WRL1163.tmp
tfm/old/: englisch.docx
(+2170 files in other folders)
